--- a/cevafrumos2.html
+++ b/cevafrumos2.html
@@ -1,127 +1,84 @@
-<HTML> 
+<html>
 
-<HEAD> 
+<head>
+    <title>Descriere Student</title>
+    <style>
+        h1 {
+            color: blue;
+            font-family: verdana;
+            font-size: 300%;
+        }
 
-      <TITLE> Descriere Student </TITLE> 
-	  <style>
-h1 {
-  color: blue;
-  font-family: verdana;
-  font-size: 300%;
-}
-h2 {
-  color: red;
-  font-family: courier;
-  font-size: 160%;
-}
-h6 {
-color: green;
-}
-img{
-  height 300px;
-  width 300px;
-  opacity: 0.5;
-}
-</style>
+        h2 {
+            color: red;
+            font-family: courier;
+            font-size: 160%;
+        }
 
-</HEAD> 
+        h6 {
+            color: green;
+        }
 
-<BODY> 
+        img {
+            height: 300px;
+            width: 300px;
+            opacity: 0.5;
+        }
+    </style>
+</head>
 
-  <h1>Nume: Androne </h1> 
+<body>
+    <h1>Nume: Androne</h1>
+    <h2>Prenume: Horatiu Gligor</h2>
+    <h6>E-mail: androne.gl.horatiu@student.utcluj.ro</h6>
+    <img src="poza.jpg">
 
-  <h2>Prenume: Horatiu Gligor <h2> 
+    <table>
+        <thead>
+            <tr>
+                <th>Disciplina</th>
+                <th>An</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Informatica aplicata</td>
+                <td>1</td>
+                <td><a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/06.pdf">Info</a></td>
+            </tr>
+            <tr>
+                <td>Programare</td>
+                <td>2</td>
+                <td><a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/04b.pdf">Programare</a></td>
+            </tr>
+            <tr>
+                <td>Circuite integrate analogice</td>
+                <td>2</td>
+                <td><a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/26.pdf">Circuite integrate analogice</a></td>
+            </tr>
+            <tr>
+                <td>Microunde</td>
+                <td>2</td>
+                <td><a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/24.pdf">Microunde</a></td>
+            </tr>
+            <tr>
+                <td>Bazele electrotehnicii</td>
+                <td>1</td>
+                <td><a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/13.pdf">Bazele electrotehnicii</a></td>
+            </tr>
+        </tbody>
+    </table>
 
-  <h6>E-mail: androne.gl.horatiu@student.utcluj.ro <h6> 
+    <br>
 
-  <img src="poza.jpg"> 
+    Hobby-uri:
+    <ul>
+        <li>Football</li>
+        <li>Video games</li>
+        <li>Filme/seriale</li>
+        <li>Plimbările în natură</li>
+    </ul>
+</body>
 
-<TABLE> 
-
-<THEAD> 
-
-   <TR>  
-
-        <TH>Disciplina</TH> 
-
-        <TH>   An</TH> 
-
-        <TH>   Link</TH> 
-
-   </TR> 
-
-</THEAD> 
-
-<TBODY>  
-
-   <TR> 
-
-        <TD> Informatica aplicata </td>    
-
-        <td> 1 </td> 
-
-<td><a href https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/06.pdf >Info</td> 
-
-    </tr> 
-
-<TR> 
-
-        <TD> Programare </td>    
-
-        <td> 2 </td> 
-
-<td><a href https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/04b.pd >Programare</td> 
-
-    </tr> 
-
-<TR> 
-
-        <TD> Circuite integrate analogice </td>    
-
-        <td> 2 </td> 
-
-<td><a href https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/26.pdf >Circuite integrate analogice  </td> 
-
-    </tr> 
-
-<TR> 
-
-        <TD> Microunde </td>    
-
-        <td> 2 </td> 
-
-<td><a href https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/24.pdf  >Microunde  </td> 
-
-    </tr> 
-
-<TR> 
-
-        <TD> Bazele electrotehnicii </td>    
-
-        <td> 1 </td> 
-
-<td><a href https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/13.pdf  >Bazele electrotehnicii </td> 
-
-    </tr> 
-
-</TBODY> 
-
-</TABLE> 
-
- <br>
-
-Hobby-uri: 
-
-<ul> 
-
-   <li>Football</li> 
-
-   <li>Video games</li> 
-
-   <li>Filme/seriale</li> 
-
-   <li>Plimbarile in natura</li> 
-
-</BODY> 
-
-</HTML> 
+</html>
